# Engine-Gold1

./: LICENSE  README.md  meson.build
includes/: WindowManager.hpp
includes/components/: Camera.hpp  Gravity.hpp  Player.hpp  Renderable.hpp  Rigidbody.hpp  Transform.hpp
includes/core/: ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  System.hpp  SystemManager.hpp  Types.hpp
includes/graphics/: Shader.hpp
includes/math/: Matrix4x4.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
includes/systems/: PhysicsSystem.hpp  RenderSystem.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: fragment.glsl
src/: WindowManager.cpp  main.cpp  meson.build
src/core/: ComponentArray.cpp  ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  SystemManager.cpp
src/graphics/: Shader.cpp
src/math/: Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/systems/: PhysicsSystem.cpp  RenderSystem.cpp
